update super project for iOS LTerminal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
+set(OSXCERT OSX Developer \(FFFFFFFFFF\))
+set(IPHONECERT iPhone Developer \(FFFFFFFFFF\))
+set(IPHONEPROVISION /Users/developer/Downloads/developer.mobileprovision)
 
 # configure imports
 set(LFL_PROTOBUF 1)
+set(LFL_OPENSSL 1)
 #set(LFL_HEADLESS 1)
 #set(LFL_CUDA 1)
 
@@ -12,6 +16,7 @@ if(LFL_IPHONE)
     set(LFL_BOX2D 1)
     set(LFL_PNG 1)
     set(LFL_JPEG 1)
+    set(LFL_GIF 1)
 elseif(LFL_ANDROID)
     set(LFL_GLES2 1)
     set(LFL_FREETYPE 1)
@@ -19,6 +24,7 @@ elseif(LFL_ANDROID)
     set(LFL_BOX2D 1)
     set(LFL_PNG 1)
     set(LFL_JPEG 1)
+    set(LFL_GIF 1)
 else(LFL_IPHONE)
     set(LFL_IPC 1)
     set(LFL_GLOG 1)
@@ -33,7 +39,6 @@ else(LFL_IPHONE)
     set(LFL_JPEG 1)
     set(LFL_GIF 1)
     set(LFL_GEOIP 1)
-    set(LFL_OPENSSL 1)
     set(LFL_PCAP 1)
     set(LFL_CLING 1)
     if(NOT LFL_HEADLESS)
