--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.2)
 set(OSXCERT OSX Developer \(FFFFFFFFFF\))
 set(IPHONECERT iPhone Developer \(FFFFFFFFFF\))
 set(IPHONEPROVISION /Users/developer/Downloads/developer.mobileprovision)
@@ -45,10 +45,6 @@ else(LFL_IPHONE)
         set(LFL_GLEW 1)
         set(LFL_QT 1)
         #set(LFL_WXWIDGETS 1)
-        set(LFL_GLFWVIDEO 1)
-        set(LFL_GLFWINPUT 1)
-        set(LFL_SDLVIDEO 1)
-        set(LFL_SDLINPUT 1)
         set(LFL_FREETYPE 1)
         set(LFL_HARFBUZZ 1)
         set(LFL_LIBCSS 1)
@@ -64,7 +60,7 @@ else(LFL_IPHONE)
     endif(NOT LFL_HEADLESS)
 endif(LFL_IPHONE)
 
-include(core/CMake/LFLRoot.cmake)
+include(core/CMake/RootInclude.cmake)
 
 # crystal bawl
 add_subdirectory(cb)
