--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ set(IPHONECERT iPhone Developer \(FFFFFFFFFF\))
 set(IPHONEPROVISION /Users/developer/Downloads/developer.mobileprovision)
 
 # configure
-set(LFL_PROTOBUF 1)
-set(LFL_FLATBUFFERS 1)
 set(LFL_OPENSSL 1)
 
 if(LFL_IPHONE)
@@ -18,47 +16,59 @@ if(LFL_IPHONE)
   set(LFL_GIF 1)
 elseif(LFL_ANDROID)
   set(LFL_GLES2 1)
-  set(LFL_FREETYPE 1)
   set(LFL_OPENCV 1)
   set(LFL_BOX2D 1)
   set(LFL_PNG 1)
   set(LFL_JPEG 1)
   set(LFL_GIF 1)
-else(LFL_IPHONE)
+elseif(LFL_EMSCRIPTEN)
+  set(LFL_GLES2 1)
+  set(LFL_BOX2D 1)
+  set(LFL_SDL 1)
+  set(LFL_PNG 1)
+  set(LFL_OPENAL 1)
+else()
   set(LFL_GLOG 1)
   set(LFL_GTEST 1)
+  set(LFL_PROTOBUF 1)
+  set(LFL_FLATBUFFERS 1)
   set(LFL_BOX2D 1)
   set(LFL_LIBARCHIVE 1)
-  set(LFL_REGEX 1)
-  set(LFL_SREGEX 1)
   set(LFL_PNG 1)
   set(LFL_JPEG 1)
   set(LFL_GIF 1)
-  set(LFL_GEOIP 1)
+  #set(LFL_GEOIP 1)
   set(LFL_PCAP 1)
   set(LFL_LIBCLANG 1)
+  set(LFL_LIBCLING 1)
   set(LFL_JSONCPP 1)
   set(LFL_LIBCSS 1)
   set(LFL_V8JS 1)
-  set(LFL_FREETYPE 1)
   set(LFL_GLEW 1)
   set(LFL_QT 1)
   #set(LFL_WXWIDGETS 1)
   #set(LFL_HARFBUZZ 1)
+  #set(LFL_FREETYPE 1)
   set(LFL_OPENCV 1)
   set(LFL_FFMPEG 1)
   set(LFL_X264 1)
   set(LFL_LAME 1)
+  set(LFL_OPENAL 1)
   #set(LFL_BERKELIUM 1)
-  set(LFL_PORTAUDIO 1)
+  #set(LFL_PORTAUDIO 1)
   #set(LFL_GLFW 1)
   #set(LFL_SDL 1)
   #set(LFL_CUDA 1)
-endif(LFL_IPHONE)
+endif()
 
 if(NOT WIN32)
   set(LFL_ICONV 1)
 endif()
+
+# external imports
+set(V8_DIR $ENV{HOME}/v8)
+set(LLVM_DIR $ENV{HOME}/llvm)
+set(CLING_LLVM_DIR $ENV{HOME}/cling-build/inst)
 
 # core
 set(LFL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
@@ -110,7 +120,3 @@ add_subdirectory(quake)
 
 # irc bots
 add_subdirectory(senators)
-
-# add more apps here
-# add_subdirectory(my_first_app)
-
