--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
-set(OSXCERT OSX Developer \(FFFFFFFFFF\))
-set(IPHONECERT iPhone Developer \(FFFFFFFFFF\))
-set(IPHONEPROVISION /Users/developer/Downloads/developer.mobileprovision)
+set(LFL_OSX_CERT OSX Developer \(FFFFFFFFFF\))
+set(LFL_IOS_CERT iPhone Developer \(FFFFFFFFFF\))
+set(LFL_IOS_PROVISION /Users/developer/Downloads/developer.mobileprovision)
 
 # configure
 set(LFL_OPENSSL 1)
 
-if(LFL_IPHONE)
+if(LFL_IOS)
   set(LFL_GLES2 1)
   set(LFL_AUDIOUNIT 1)
   set(LFL_OPENCV 1)
@@ -21,6 +21,7 @@ elseif(LFL_ANDROID)
   set(LFL_PNG 1)
   set(LFL_JPEG 1)
   set(LFL_GIF 1)
+  set(LFL_FREETYPE 1)
 elseif(LFL_EMSCRIPTEN)
   set(LFL_GLES2 1)
   set(LFL_BOX2D 1)
@@ -28,15 +29,20 @@ elseif(LFL_EMSCRIPTEN)
   set(LFL_PNG 1)
   set(LFL_OPENAL 1)
 else()
-  set(LFL_GLOG 1)
+  if(NOT WIN32)
+    set(LFL_GLOG 1)
+    set(LFL_PROTOBUF 1)
+    set(LFL_QT 1)
+    set(LFL_FREETYPE 1)
+  endif()
   set(LFL_GTEST 1)
-  set(LFL_PROTOBUF 1)
   set(LFL_FLATBUFFERS 1)
   set(LFL_BOX2D 1)
   set(LFL_LIBARCHIVE 1)
   set(LFL_PNG 1)
   set(LFL_JPEG 1)
   set(LFL_GIF 1)
+  set(LFL_RE2 1)
   #set(LFL_GEOIP 1)
   set(LFL_PCAP 1)
   set(LFL_LIBCLANG 1)
@@ -45,10 +51,8 @@ else()
   set(LFL_LIBCSS 1)
   set(LFL_V8JS 1)
   set(LFL_GLEW 1)
-  set(LFL_QT 1)
   #set(LFL_WXWIDGETS 1)
   #set(LFL_HARFBUZZ 1)
-  #set(LFL_FREETYPE 1)
   set(LFL_OPENCV 1)
   set(LFL_FFMPEG 1)
   set(LFL_X264 1)
