move assets to Application class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ set(LFL_IOS_CERT iPhone Developer \(FFFFFFFFFF\))
 set(LFL_IOS_PROVISION /Users/developer/Downloads/developer.mobileprovision)
 
 # configure
-set(LFL_OPENSSL 1)
-
 if(LFL_IOS)
   set(LFL_GLES2 1)
   set(LFL_AUDIOUNIT 1)
@@ -22,6 +20,7 @@ elseif(LFL_ANDROID)
   set(LFL_JPEG 1)
   set(LFL_GIF 1)
   set(LFL_FREETYPE 1)
+  set(LFL_OPENSSL 1)
 elseif(LFL_EMSCRIPTEN)
   set(LFL_GLES2 1)
   set(LFL_BOX2D 1)
@@ -34,6 +33,9 @@ else()
     set(LFL_PROTOBUF 1)
     set(LFL_QT 1)
     set(LFL_FREETYPE 1)
+  endif()
+  if(NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    set(LFL_OPENSSL 1)
   endif()
   set(LFL_GTEST 1)
   set(LFL_FLATBUFFERS 1)
