--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,29 +3,28 @@ set(LFL_OSX_CERT OSX Developer \(FFFFFFFFFF\))
 set(LFL_IOS_CERT iPhone Developer \(FFFFFFFFFF\))
 set(LFL_IOS_PROVISION /Users/developer/Downloads/developer.mobileprovision)
 
+# os
+include(core/CMake/LFLOS.cmake)
+
+set(LFL_FLATBUFFERS 1)
+set(LFL_PNG 1)
+set(LFL_GIF 1)
+set(LFL_JPEG 1)
+set(LFL_BOX2D 1)
+set(LFL_SQLITE 1)
+
 # configure
 if(LFL_IOS)
-  set(LFL_GLES2 1)
   set(LFL_AUDIOUNIT 1)
   set(LFL_OPENCV 1)
-  set(LFL_BOX2D 1)
-  set(LFL_PNG 1)
-  set(LFL_JPEG 1)
-  set(LFL_GIF 1)
+  set(LFL_OPENSSL 1)
 elseif(LFL_ANDROID)
-  set(LFL_GLES2 1)
   set(LFL_OPENCV 1)
-  set(LFL_BOX2D 1)
-  set(LFL_PNG 1)
-  set(LFL_JPEG 1)
-  set(LFL_GIF 1)
   set(LFL_FREETYPE 1)
   set(LFL_OPENSSL 1)
+  set(LFL_GTEST 1)
 elseif(LFL_EMSCRIPTEN)
-  set(LFL_GLES2 1)
-  set(LFL_BOX2D 1)
   set(LFL_SDL 1)
-  set(LFL_PNG 1)
   set(LFL_OPENAL 1)
 else()
   if(NOT WIN32)
@@ -38,12 +37,7 @@ else()
     set(LFL_OPENSSL 1)
   endif()
   set(LFL_GTEST 1)
-  set(LFL_FLATBUFFERS 1)
-  set(LFL_BOX2D 1)
   set(LFL_LIBARCHIVE 1)
-  set(LFL_PNG 1)
-  set(LFL_JPEG 1)
-  set(LFL_GIF 1)
   set(LFL_RE2 1)
   #set(LFL_GEOIP 1)
   set(LFL_PCAP 1)
@@ -69,7 +63,7 @@ else()
   set(LFL_CMAKEDAEMON 1)
 endif()
 
-if(NOT WIN32)
+if(NOT WIN32 AND NOT LFL_ANDROID)
   set(LFL_ICONV 1)
 endif()
 
@@ -82,6 +76,7 @@ set(CLING_LLVM_DIR $ENV{HOME}/cling-build/inst)
 set(LFL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(LFL_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(LFL_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/core)
+set(LFL_OS_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${LFL_OS}/core)
 include(core/CMake/LFLCore.cmake)
 
 # crystal bawl
