--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 3.3)
 set(LFL_OSX_CERT OSX Developer \(FFFFFFFFFF\))
 set(LFL_IOS_CERT iPhone Developer \(FFFFFFFFFF\))
 set(LFL_IOS_PROVISION /Users/developer/Downloads/developer.mobileprovision)
@@ -12,6 +12,10 @@ set(LFL_GIF 1)
 set(LFL_JPEG 1)
 set(LFL_BOX2D 1)
 set(LFL_SQLITE 1)
+set(LFL_SQLCIPHER 1)
+set(LFL_REF10EXTRACT 1)
+set(LFL_PROTOBUF 1)
+set(LFL_MOSH 1)
 
 # configure
 if(LFL_IOS)
@@ -29,13 +33,10 @@ elseif(LFL_EMSCRIPTEN)
 else()
   if(NOT WIN32)
     set(LFL_GLOG 1)
-    set(LFL_PROTOBUF 1)
     set(LFL_QT 1)
     set(LFL_FREETYPE 1)
   endif()
-  if(NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
-    set(LFL_OPENSSL 1)
-  endif()
+  set(LFL_OPENSSL 1)
   set(LFL_GTEST 1)
   set(LFL_LIBARCHIVE 1)
   set(LFL_RE2 1)
