factor out SocketConnection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ set(LFL_JPEG 1)
 set(LFL_BOX2D 1)
 set(LFL_SQLITE 1)
 set(LFL_SQLCIPHER 1)
-set(LFL_REF10EXTRACT 1)
 set(LFL_PROTOBUF 1)
+set(LFL_CRITTERCISM 1)
+set(LFL_HOCKEYAPP 1)
+set(LFL_REF10EXTRACT 1)
 set(LFL_MOSH 1)
 
 # configure
