--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,18 +13,23 @@ set(LFL_JPEG 1)
 set(LFL_BOX2D 1)
 set(LFL_SQLITE 1)
 set(LFL_SQLCIPHER 1)
-set(LFL_PROTOBUF 1)
 set(LFL_CRITTERCISM 1)
 set(LFL_HOCKEYAPP 1)
 set(LFL_REF10EXTRACT 1)
-set(LFL_MOSH 1)
-set(LFL_STOCKFISH 1)
+
+if(NOT LFL_XCODE)
+  set(LFL_PROTOBUF 1)
+  set(LFL_MOSH 1)
+  set(LFL_STOCKFISH 1)
+endif()
 
 # configure
 if(LFL_IOS)
   set(LFL_AUDIOUNIT 1)
-  set(LFL_OPENCV 1)
   set(LFL_OPENSSL 1)
+  if(NOT LFL_XCODE)
+    set(LFL_OPENCV 1)
+  endif()
 elseif(LFL_ANDROID)
   set(LFL_OPENCV 1)
   set(LFL_FREETYPE 1)
