Use CMake MACOSX_BUNDLE on iOS and OSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,10 @@ elseif(LFL_EMSCRIPTEN)
   set(LFL_OPENAL 1)
 else()
   if(NOT WIN32)
+    if(NOT LFL_XCODE)
+      set(LFL_QT 1)
+    endif()
     set(LFL_GLOG 1)
-    set(LFL_QT 1)
     set(LFL_FREETYPE 1)
   endif()
   set(LFL_OPENSSL 1)
