--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ else()
   #set(LFL_GEOIP 1)
   set(LFL_PCAP 1)
   set(LFL_LIBCLANG 1)
-  set(LFL_LIBCLING 1)
+  #set(LFL_LIBCLING 1)
   set(LFL_JSONCPP 1)
   set(LFL_LIBCSS 1)
   set(LFL_V8JS 1)
@@ -92,18 +92,15 @@ set(LFL_OS_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${LFL_OS}/core)
 include(core/CMake/LFLCore.cmake)
 
 # projects
+add_subdirectory(AncientChess)
+add_subdirectory(BlasterMaster)
 add_subdirectory(CrystalBawl)
-add_subdirectory(miner)
 add_subdirectory(FusionSensor)
-add_subdirectory(calculator)
+add_subdirectory(JITLab)
 add_subdirectory(LTerminal)
-add_subdirectory(LEditor)
-add_subdirectory(LBrowser)
-add_subdirectory(LChess)
+add_subdirectory(LucidTrader)
+add_subdirectory(Photoducer)
 add_subdirectory(SpaceballFuture)
-add_subdirectory(image)
-add_subdirectory(master)
-add_subdirectory(blaster)
-add_subdirectory(market)
-add_subdirectory(LQuake)
-add_subdirectory(senators)
+add_subdirectory(TepidFusion)
+add_subdirectory(TinyBrowser)
+add_subdirectory(QuakeClone)
