--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ set(LFL_SQLITE 1)
 set(LFL_SQLCIPHER 1)
 set(LFL_FABRIC 1)
 set(LFL_REF10EXTRACT 1)
+set(LFL_OPENGL 1)
+set(LFL_GLES1 1)
+set(LFL_GLES2 1)
 
 if(NOT LFL_XCODE)
   set(LFL_PROTOBUF 1)
@@ -42,7 +45,7 @@ elseif(LFL_EMSCRIPTEN)
 else()
   if(NOT WIN32)
     if(NOT LFL_XCODE)
-      set(LFL_QT 1)
+      option(LFL_QT "Qt framework support")
     endif()
     set(LFL_GLOG 1)
     set(LFL_FREETYPE 1)
@@ -53,7 +56,7 @@ else()
   set(LFL_RE2 1)
   #set(LFL_GEOIP 1)
   set(LFL_PCAP 1)
-  set(LFL_LIBCLANG 1)
+  #set(LFL_LIBCLANG 1)
   #set(LFL_LIBCLING 1)
   set(LFL_JSONCPP 1)
   set(LFL_LIBCSS 1)
@@ -66,6 +69,7 @@ else()
   set(LFL_X264 1)
   set(LFL_LAME 1)
   set(LFL_OPENAL 1)
+  set(LFL_STB 1)
   #set(LFL_BERKELIUM 1)
   #set(LFL_PORTAUDIO 1)
   #set(LFL_GLFW 1)
@@ -90,9 +94,13 @@ set(LFL_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(LFL_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/core)
 set(LFL_OS_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${LFL_OS}/core)
 include(core/CMake/LFLCore.cmake)
+add_subdirectory(${LFL_SOURCE_DIR}/core/web ${LFL_CORE_BINARY_DIR}/web)
+add_subdirectory(${LFL_SOURCE_DIR}/core/ide ${LFL_CORE_BINARY_DIR}/ide)
+add_subdirectory(${LFL_SOURCE_DIR}/core/game ${LFL_CORE_BINARY_DIR}/game)
+add_subdirectory(${LFL_SOURCE_DIR}/core/speech ${LFL_CORE_BINARY_DIR}/speech)
 
 # projects
-add_subdirectory(AncientChess)
+add_subdirectory(OldChess)
 add_subdirectory(BlasterMaster)
 add_subdirectory(CrystalBawl)
 add_subdirectory(FusionSensor)
